--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@microlink/react-json-view": "^1.23.1",
     "antd": "^5.19.3",
     "next": "14.2.5",
     "openai": "^4.53.2",
     "react": "^18",
     "react-dom": "^18",
+    "react18-json-view": "^0.2.8",
     "zod": "^3.23.8",
     "zod-form-data": "^2.0.2"
   },
